feat: pre-trained model

--- a/model_gen.ipynb
+++ b/model_gen.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 1,
    "metadata": {
     "collapsed": true
    },
@@ -11,7 +11,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "device: cuda\n"
+      "device: cpu\n"
      ]
     }
    ],
@@ -27,21 +27,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 2,
+   "metadata": {
+    "collapsed": false
+   },
    "outputs": [],
    "source": [
     "# 读数据\n",
     "data = torch.load(\"data.pth\")\n",
     "feature = data['feature']\n",
     "label = data['label']"
-   ],
-   "metadata": {
-    "collapsed": false
-   }
+   ]
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 3,
+   "metadata": {
+    "collapsed": false
+   },
    "outputs": [],
    "source": [
     "# 生成训练集、测试集\n",
@@ -49,14 +52,14 @@
     "\n",
     "x_train, x_test, y_train, y_test = train_test_split(feature, label, test_size=0.2, train_size=0.8, random_state=0)\n",
     "x_train, x_test, y_train, y_test = x_train.to(device), x_test.to(device), y_train.to(device), y_test.to(device)"
-   ],
-   "metadata": {
-    "collapsed": false
-   }
+   ]
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 4,
+   "metadata": {
+    "collapsed": false
+   },
    "outputs": [],
    "source": [
     "# 加载数据\n",
@@ -67,14 +70,14 @@
     "\n",
     "test_dataset = TensorDataset(x_test, y_test)\n",
     "test_loader = DataLoader(test_dataset, batch_size=BATCH_SIZE, shuffle=True)"
-   ],
-   "metadata": {
-    "collapsed": false
-   }
+   ]
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 5,
+   "metadata": {
+    "collapsed": false
+   },
    "outputs": [],
    "source": [
     "# 定义网络\n",
@@ -105,119 +108,119 @@
     "                       eps=1e-08,\n",
     "                       weight_decay=0,\n",
     "                       amsgrad=False)"
-   ],
-   "metadata": {
-    "collapsed": false
-   }
+   ]
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 6,
+   "metadata": {
+    "collapsed": false
+   },
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "epoch 0 loss: 0.3258636626\n",
-      "epoch 10 loss: 0.0608343219\n",
-      "epoch 20 loss: 0.0425836477\n",
-      "epoch 30 loss: 0.0330095728\n",
-      "epoch 40 loss: 0.0237424968\n",
-      "epoch 50 loss: 0.0259919976\n",
-      "epoch 60 loss: 0.0217680709\n",
-      "epoch 70 loss: 0.0170985210\n",
-      "epoch 80 loss: 0.0164280826\n",
-      "epoch 90 loss: 0.0138399982\n",
-      "epoch 100 loss: 0.0115069504\n",
-      "epoch 110 loss: 0.0121777140\n",
-      "epoch 120 loss: 0.0108990255\n",
-      "epoch 130 loss: 0.0086292719\n",
-      "epoch 140 loss: 0.0091509145\n",
-      "epoch 150 loss: 0.0098033523\n",
-      "epoch 160 loss: 0.0086454757\n",
-      "epoch 170 loss: 0.0099069467\n",
-      "epoch 180 loss: 0.0071303178\n",
-      "epoch 190 loss: 0.0074142918\n",
-      "epoch 200 loss: 0.0068652923\n",
-      "epoch 210 loss: 0.0069613622\n",
-      "epoch 220 loss: 0.0057754395\n",
-      "epoch 230 loss: 0.0053508078\n",
-      "epoch 240 loss: 0.0064230067\n",
-      "epoch 250 loss: 0.0059882675\n",
-      "epoch 260 loss: 0.0057689595\n",
-      "epoch 270 loss: 0.0042897727\n",
-      "epoch 280 loss: 0.0050572434\n",
-      "epoch 290 loss: 0.0048364249\n",
-      "epoch 300 loss: 0.0036989648\n",
-      "epoch 310 loss: 0.0046856451\n",
-      "epoch 320 loss: 0.0064290294\n",
-      "epoch 330 loss: 0.0031721070\n",
-      "epoch 340 loss: 0.0040999898\n",
-      "epoch 350 loss: 0.0050770199\n",
-      "epoch 360 loss: 0.0061888960\n",
-      "epoch 370 loss: 0.0050746319\n",
-      "epoch 380 loss: 0.0042459116\n",
-      "epoch 390 loss: 0.0047504204\n",
-      "epoch 400 loss: 0.0024512647\n",
-      "epoch 410 loss: 0.0029010808\n",
-      "epoch 420 loss: 0.0026175788\n",
-      "epoch 430 loss: 0.0043064599\n",
-      "epoch 440 loss: 0.0043072661\n",
-      "epoch 450 loss: 0.0027864727\n",
-      "epoch 460 loss: 0.0041357023\n",
-      "epoch 470 loss: 0.0024302420\n",
-      "epoch 480 loss: 0.0038743691\n",
-      "epoch 490 loss: 0.0027209921\n",
-      "epoch 500 loss: 0.0014113978\n",
-      "epoch 510 loss: 0.0024959878\n",
-      "epoch 520 loss: 0.0024130620\n",
-      "epoch 530 loss: 0.0032861151\n",
-      "epoch 540 loss: 0.0013620344\n",
-      "epoch 550 loss: 0.0027335575\n",
-      "epoch 560 loss: 0.0022631659\n",
-      "epoch 570 loss: 0.0011678391\n",
-      "epoch 580 loss: 0.0020339053\n",
-      "epoch 590 loss: 0.0014376215\n",
-      "epoch 600 loss: 0.0029676278\n",
-      "epoch 610 loss: 0.0012452417\n",
-      "epoch 620 loss: 0.0030994072\n",
-      "epoch 630 loss: 0.0017651570\n",
-      "epoch 640 loss: 0.0021022802\n",
-      "epoch 650 loss: 0.0022997281\n",
-      "epoch 660 loss: 0.0021226568\n",
-      "epoch 670 loss: 0.0022487336\n",
-      "epoch 680 loss: 0.0022338574\n",
-      "epoch 690 loss: 0.0030804804\n",
-      "epoch 700 loss: 0.0024705331\n",
-      "epoch 710 loss: 0.0010932380\n",
-      "epoch 720 loss: 0.0030406297\n",
-      "epoch 730 loss: 0.0010946234\n",
-      "epoch 740 loss: 0.0020043427\n",
-      "epoch 750 loss: 0.0013723653\n",
-      "epoch 760 loss: 0.0006835007\n",
-      "epoch 770 loss: 0.0024096400\n",
-      "epoch 780 loss: 0.0009953043\n",
-      "epoch 790 loss: 0.0011097484\n",
-      "epoch 800 loss: 0.0016696004\n",
-      "epoch 810 loss: 0.0010775709\n",
-      "epoch 820 loss: 0.0008854757\n",
-      "epoch 830 loss: 0.0017816700\n",
-      "epoch 840 loss: 0.0010578107\n",
-      "epoch 850 loss: 0.0015732488\n",
-      "epoch 860 loss: 0.0013862846\n",
-      "epoch 870 loss: 0.0006893070\n",
-      "epoch 880 loss: 0.0011070825\n",
-      "epoch 890 loss: 0.0008189836\n",
-      "epoch 900 loss: 0.0008467688\n",
-      "epoch 910 loss: 0.0008968083\n",
-      "epoch 920 loss: 0.0011443191\n",
-      "epoch 930 loss: 0.0008625802\n",
-      "epoch 940 loss: 0.0011435278\n",
-      "epoch 950 loss: 0.0003692472\n",
-      "epoch 960 loss: 0.0009858585\n",
-      "epoch 970 loss: 0.0008248973\n",
-      "epoch 980 loss: 0.0009842706\n",
-      "epoch 990 loss: 0.0006904829\n",
+      "epoch 0 loss: 0.3291572724\n",
+      "epoch 10 loss: 0.0647634281\n",
+      "epoch 20 loss: 0.0449954403\n",
+      "epoch 30 loss: 0.0303180392\n",
+      "epoch 40 loss: 0.0258456737\n",
+      "epoch 50 loss: 0.0245770348\n",
+      "epoch 60 loss: 0.0239587211\n",
+      "epoch 70 loss: 0.0176149821\n",
+      "epoch 80 loss: 0.0132854770\n",
+      "epoch 90 loss: 0.0139324281\n",
+      "epoch 100 loss: 0.0151357625\n",
+      "epoch 110 loss: 0.0118461758\n",
+      "epoch 120 loss: 0.0116393077\n",
+      "epoch 130 loss: 0.0082939467\n",
+      "epoch 140 loss: 0.0100089271\n",
+      "epoch 150 loss: 0.0094873867\n",
+      "epoch 160 loss: 0.0089448032\n",
+      "epoch 170 loss: 0.0066554623\n",
+      "epoch 180 loss: 0.0059360032\n",
+      "epoch 190 loss: 0.0066568274\n",
+      "epoch 200 loss: 0.0060255331\n",
+      "epoch 210 loss: 0.0056815776\n",
+      "epoch 220 loss: 0.0095185431\n",
+      "epoch 230 loss: 0.0050715698\n",
+      "epoch 240 loss: 0.0032584682\n",
+      "epoch 250 loss: 0.0080648881\n",
+      "epoch 260 loss: 0.0049500790\n",
+      "epoch 270 loss: 0.0043488823\n",
+      "epoch 280 loss: 0.0045837761\n",
+      "epoch 290 loss: 0.0040580846\n",
+      "epoch 300 loss: 0.0042817925\n",
+      "epoch 310 loss: 0.0029149554\n",
+      "epoch 320 loss: 0.0036762658\n",
+      "epoch 330 loss: 0.0039788055\n",
+      "epoch 340 loss: 0.0034219510\n",
+      "epoch 350 loss: 0.0026548866\n",
+      "epoch 360 loss: 0.0037736671\n",
+      "epoch 370 loss: 0.0030855704\n",
+      "epoch 380 loss: 0.0041787221\n",
+      "epoch 390 loss: 0.0025845481\n",
+      "epoch 400 loss: 0.0043001783\n",
+      "epoch 410 loss: 0.0034748537\n",
+      "epoch 420 loss: 0.0033900939\n",
+      "epoch 430 loss: 0.0026445266\n",
+      "epoch 440 loss: 0.0044146946\n",
+      "epoch 450 loss: 0.0022137471\n",
+      "epoch 460 loss: 0.0016503553\n",
+      "epoch 470 loss: 0.0012993246\n",
+      "epoch 480 loss: 0.0033643055\n",
+      "epoch 490 loss: 0.0028168179\n",
+      "epoch 500 loss: 0.0029000582\n",
+      "epoch 510 loss: 0.0023392192\n",
+      "epoch 520 loss: 0.0020245725\n",
+      "epoch 530 loss: 0.0028552202\n",
+      "epoch 540 loss: 0.0033420806\n",
+      "epoch 550 loss: 0.0031386022\n",
+      "epoch 560 loss: 0.0029464926\n",
+      "epoch 570 loss: 0.0024303708\n",
+      "epoch 580 loss: 0.0023938893\n",
+      "epoch 590 loss: 0.0014607964\n",
+      "epoch 600 loss: 0.0011270077\n",
+      "epoch 610 loss: 0.0018127386\n",
+      "epoch 620 loss: 0.0014332131\n",
+      "epoch 630 loss: 0.0019951223\n",
+      "epoch 640 loss: 0.0025331259\n",
+      "epoch 650 loss: 0.0021232248\n",
+      "epoch 660 loss: 0.0017455384\n",
+      "epoch 670 loss: 0.0015862811\n",
+      "epoch 680 loss: 0.0018048039\n",
+      "epoch 690 loss: 0.0012717838\n",
+      "epoch 700 loss: 0.0010140054\n",
+      "epoch 710 loss: 0.0007432869\n",
+      "epoch 720 loss: 0.0011916312\n",
+      "epoch 730 loss: 0.0009389866\n",
+      "epoch 740 loss: 0.0008811128\n",
+      "epoch 750 loss: 0.0009861903\n",
+      "epoch 760 loss: 0.0014739034\n",
+      "epoch 770 loss: 0.0016984627\n",
+      "epoch 780 loss: 0.0017308624\n",
+      "epoch 790 loss: 0.0006878438\n",
+      "epoch 800 loss: 0.0008317715\n",
+      "epoch 810 loss: 0.0019625594\n",
+      "epoch 820 loss: 0.0009086827\n",
+      "epoch 830 loss: 0.0007450359\n",
+      "epoch 840 loss: 0.0009812271\n",
+      "epoch 850 loss: 0.0012822541\n",
+      "epoch 860 loss: 0.0004198042\n",
+      "epoch 870 loss: 0.0009840586\n",
+      "epoch 880 loss: 0.0006356792\n",
+      "epoch 890 loss: 0.0014790243\n",
+      "epoch 900 loss: 0.0005932676\n",
+      "epoch 910 loss: 0.0021813904\n",
+      "epoch 920 loss: 0.0009520856\n",
+      "epoch 930 loss: 0.0009902627\n",
+      "epoch 940 loss: 0.0016948841\n",
+      "epoch 950 loss: 0.0008403276\n",
+      "epoch 960 loss: 0.0007696679\n",
+      "epoch 970 loss: 0.0006744899\n",
+      "epoch 980 loss: 0.0005031819\n",
+      "epoch 990 loss: 0.0008635118\n",
       "Finished Training\n"
      ]
     }
@@ -251,20 +254,20 @@
     "# 训练结束后保存网络参数\n",
     "PATH = './model.pth'\n",
     "torch.save(net.state_dict(), PATH)"
-   ],
-   "metadata": {
-    "collapsed": false
-   }
+   ]
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 7,
+   "metadata": {
+    "collapsed": false
+   },
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Accuracy: 0.9728333333333333\n"
+      "Accuracy: 0.9713333333333334\n"
      ]
     }
    ],
@@ -288,29 +291,31 @@
     "        correct += (predicted == labels).sum().item()\n",
     "\n",
     "print(f'Accuracy: {correct / total}')"
-   ],
-   "metadata": {
-    "collapsed": false
-   }
+   ]
   }
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "baseclone",
    "language": "python",
    "name": "python3"
   },
   "language_info": {
    "codemirror_mode": {
     "name": "ipython",
-    "version": 2
+    "version": 3
    },
    "file_extension": ".py",
    "mimetype": "text/x-python",
    "name": "python",
    "nbconvert_exporter": "python",
-   "pygments_lexer": "ipython2",
-   "version": "2.7.6"
+   "pygments_lexer": "ipython3",
+   "version": "3.9.15 (main, Nov  4 2022, 16:35:55) [MSC v.1916 64 bit (AMD64)]"
+  },
+  "vscode": {
+   "interpreter": {
+    "hash": "b4494550fd2c455d12025b7cfce3597d9eb74249dc2acea6a9c1fae47f4abe40"
+   }
   }
  },
  "nbformat": 4,
