refactor: extract model to separate file

--- a/model_gen.ipynb
+++ b/model_gen.ipynb
@@ -81,20 +81,8 @@
    "outputs": [],
    "source": [
     "# 定义网络\n",
+    "from model import Net\n",
     "import torch.nn as nn\n",
-    "\n",
-    "\n",
-    "class Net(nn.Module):\n",
-    "    def __init__(self):\n",
-    "        super(Net, self).__init__()\n",
-    "        self.hidden = nn.Linear(FEATURE_DIM, FEATURE_DIM)\n",
-    "        self.out = nn.Linear(FEATURE_DIM, N_CLASSES)\n",
-    "\n",
-    "    def forward(self, x):\n",
-    "        x = torch.sigmoid(self.hidden(x))\n",
-    "        x = self.out(x)\n",
-    "        return x\n",
-    "\n",
     "\n",
     "net = Net().to(device)\n",
     "\n",
