feat: deeper classifier model

--- a/model_gen.ipynb
+++ b/model_gen.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 16,
    "metadata": {
     "collapsed": true
    },
@@ -27,7 +27,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 17,
    "metadata": {
     "collapsed": false
    },
@@ -41,7 +41,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 18,
    "metadata": {
     "collapsed": false
    },
@@ -56,7 +56,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 19,
    "metadata": {
     "collapsed": false
    },
@@ -74,7 +74,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 20,
    "metadata": {
     "collapsed": false
    },
@@ -91,7 +91,7 @@
     "\n",
     "criterion = nn.CrossEntropyLoss()\n",
     "optimizer = optim.Adam(net.parameters(),\n",
-    "                       lr=0.001,\n",
+    "                       lr=0.0001,\n",
     "                       betas=(0.9, 0.999),\n",
     "                       eps=1e-08,\n",
     "                       weight_decay=0,\n",
@@ -100,7 +100,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 21,
    "metadata": {
     "collapsed": false
    },
@@ -109,106 +109,106 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "epoch 0 loss: 0.3291572724\n",
-      "epoch 10 loss: 0.0647634281\n",
-      "epoch 20 loss: 0.0449954403\n",
-      "epoch 30 loss: 0.0303180392\n",
-      "epoch 40 loss: 0.0258456737\n",
-      "epoch 50 loss: 0.0245770348\n",
-      "epoch 60 loss: 0.0239587211\n",
-      "epoch 70 loss: 0.0176149821\n",
-      "epoch 80 loss: 0.0132854770\n",
-      "epoch 90 loss: 0.0139324281\n",
-      "epoch 100 loss: 0.0151357625\n",
-      "epoch 110 loss: 0.0118461758\n",
-      "epoch 120 loss: 0.0116393077\n",
-      "epoch 130 loss: 0.0082939467\n",
-      "epoch 140 loss: 0.0100089271\n",
-      "epoch 150 loss: 0.0094873867\n",
-      "epoch 160 loss: 0.0089448032\n",
-      "epoch 170 loss: 0.0066554623\n",
-      "epoch 180 loss: 0.0059360032\n",
-      "epoch 190 loss: 0.0066568274\n",
-      "epoch 200 loss: 0.0060255331\n",
-      "epoch 210 loss: 0.0056815776\n",
-      "epoch 220 loss: 0.0095185431\n",
-      "epoch 230 loss: 0.0050715698\n",
-      "epoch 240 loss: 0.0032584682\n",
-      "epoch 250 loss: 0.0080648881\n",
-      "epoch 260 loss: 0.0049500790\n",
-      "epoch 270 loss: 0.0043488823\n",
-      "epoch 280 loss: 0.0045837761\n",
-      "epoch 290 loss: 0.0040580846\n",
-      "epoch 300 loss: 0.0042817925\n",
-      "epoch 310 loss: 0.0029149554\n",
-      "epoch 320 loss: 0.0036762658\n",
-      "epoch 330 loss: 0.0039788055\n",
-      "epoch 340 loss: 0.0034219510\n",
-      "epoch 350 loss: 0.0026548866\n",
-      "epoch 360 loss: 0.0037736671\n",
-      "epoch 370 loss: 0.0030855704\n",
-      "epoch 380 loss: 0.0041787221\n",
-      "epoch 390 loss: 0.0025845481\n",
-      "epoch 400 loss: 0.0043001783\n",
-      "epoch 410 loss: 0.0034748537\n",
-      "epoch 420 loss: 0.0033900939\n",
-      "epoch 430 loss: 0.0026445266\n",
-      "epoch 440 loss: 0.0044146946\n",
-      "epoch 450 loss: 0.0022137471\n",
-      "epoch 460 loss: 0.0016503553\n",
-      "epoch 470 loss: 0.0012993246\n",
-      "epoch 480 loss: 0.0033643055\n",
-      "epoch 490 loss: 0.0028168179\n",
-      "epoch 500 loss: 0.0029000582\n",
-      "epoch 510 loss: 0.0023392192\n",
-      "epoch 520 loss: 0.0020245725\n",
-      "epoch 530 loss: 0.0028552202\n",
-      "epoch 540 loss: 0.0033420806\n",
-      "epoch 550 loss: 0.0031386022\n",
-      "epoch 560 loss: 0.0029464926\n",
-      "epoch 570 loss: 0.0024303708\n",
-      "epoch 580 loss: 0.0023938893\n",
-      "epoch 590 loss: 0.0014607964\n",
-      "epoch 600 loss: 0.0011270077\n",
-      "epoch 610 loss: 0.0018127386\n",
-      "epoch 620 loss: 0.0014332131\n",
-      "epoch 630 loss: 0.0019951223\n",
-      "epoch 640 loss: 0.0025331259\n",
-      "epoch 650 loss: 0.0021232248\n",
-      "epoch 660 loss: 0.0017455384\n",
-      "epoch 670 loss: 0.0015862811\n",
-      "epoch 680 loss: 0.0018048039\n",
-      "epoch 690 loss: 0.0012717838\n",
-      "epoch 700 loss: 0.0010140054\n",
-      "epoch 710 loss: 0.0007432869\n",
-      "epoch 720 loss: 0.0011916312\n",
-      "epoch 730 loss: 0.0009389866\n",
-      "epoch 740 loss: 0.0008811128\n",
-      "epoch 750 loss: 0.0009861903\n",
-      "epoch 760 loss: 0.0014739034\n",
-      "epoch 770 loss: 0.0016984627\n",
-      "epoch 780 loss: 0.0017308624\n",
-      "epoch 790 loss: 0.0006878438\n",
-      "epoch 800 loss: 0.0008317715\n",
-      "epoch 810 loss: 0.0019625594\n",
-      "epoch 820 loss: 0.0009086827\n",
-      "epoch 830 loss: 0.0007450359\n",
-      "epoch 840 loss: 0.0009812271\n",
-      "epoch 850 loss: 0.0012822541\n",
-      "epoch 860 loss: 0.0004198042\n",
-      "epoch 870 loss: 0.0009840586\n",
-      "epoch 880 loss: 0.0006356792\n",
-      "epoch 890 loss: 0.0014790243\n",
-      "epoch 900 loss: 0.0005932676\n",
-      "epoch 910 loss: 0.0021813904\n",
-      "epoch 920 loss: 0.0009520856\n",
-      "epoch 930 loss: 0.0009902627\n",
-      "epoch 940 loss: 0.0016948841\n",
-      "epoch 950 loss: 0.0008403276\n",
-      "epoch 960 loss: 0.0007696679\n",
-      "epoch 970 loss: 0.0006744899\n",
-      "epoch 980 loss: 0.0005031819\n",
-      "epoch 990 loss: 0.0008635118\n",
+      "epoch 0 loss: 0.7381000892\n",
+      "epoch 10 loss: 0.0784555322\n",
+      "epoch 20 loss: 0.0427763426\n",
+      "epoch 30 loss: 0.0298936598\n",
+      "epoch 40 loss: 0.0219812782\n",
+      "epoch 50 loss: 0.0185304847\n",
+      "epoch 60 loss: 0.0161231087\n",
+      "epoch 70 loss: 0.0135821077\n",
+      "epoch 80 loss: 0.0129703612\n",
+      "epoch 90 loss: 0.0111898305\n",
+      "epoch 100 loss: 0.0111980851\n",
+      "epoch 110 loss: 0.0093882697\n",
+      "epoch 120 loss: 0.0110214647\n",
+      "epoch 130 loss: 0.0090873142\n",
+      "epoch 140 loss: 0.0097399946\n",
+      "epoch 150 loss: 0.0090545689\n",
+      "epoch 160 loss: 0.0069340025\n",
+      "epoch 170 loss: 0.0091755603\n",
+      "epoch 180 loss: 0.0067685667\n",
+      "epoch 190 loss: 0.0068712495\n",
+      "epoch 200 loss: 0.0068794337\n",
+      "epoch 210 loss: 0.0074095086\n",
+      "epoch 220 loss: 0.0049696714\n",
+      "epoch 230 loss: 0.0068145098\n",
+      "epoch 240 loss: 0.0065242344\n",
+      "epoch 250 loss: 0.0058775752\n",
+      "epoch 260 loss: 0.0069919232\n",
+      "epoch 270 loss: 0.0063808572\n",
+      "epoch 280 loss: 0.0054384340\n",
+      "epoch 290 loss: 0.0054437259\n",
+      "epoch 300 loss: 0.0044803196\n",
+      "epoch 310 loss: 0.0046767764\n",
+      "epoch 320 loss: 0.0048795001\n",
+      "epoch 330 loss: 0.0052208376\n",
+      "epoch 340 loss: 0.0048750340\n",
+      "epoch 350 loss: 0.0048650342\n",
+      "epoch 360 loss: 0.0041588506\n",
+      "epoch 370 loss: 0.0038010783\n",
+      "epoch 380 loss: 0.0049577221\n",
+      "epoch 390 loss: 0.0048423833\n",
+      "epoch 400 loss: 0.0041452763\n",
+      "epoch 410 loss: 0.0046994432\n",
+      "epoch 420 loss: 0.0037613317\n",
+      "epoch 430 loss: 0.0040828159\n",
+      "epoch 440 loss: 0.0037275185\n",
+      "epoch 450 loss: 0.0040017307\n",
+      "epoch 460 loss: 0.0033960704\n",
+      "epoch 470 loss: 0.0035609558\n",
+      "epoch 480 loss: 0.0030690596\n",
+      "epoch 490 loss: 0.0040057704\n",
+      "epoch 500 loss: 0.0032237812\n",
+      "epoch 510 loss: 0.0042824884\n",
+      "epoch 520 loss: 0.0024945880\n",
+      "epoch 530 loss: 0.0034883527\n",
+      "epoch 540 loss: 0.0033568047\n",
+      "epoch 550 loss: 0.0029253783\n",
+      "epoch 560 loss: 0.0026256615\n",
+      "epoch 570 loss: 0.0029331055\n",
+      "epoch 580 loss: 0.0027690075\n",
+      "epoch 590 loss: 0.0040065987\n",
+      "epoch 600 loss: 0.0030390087\n",
+      "epoch 610 loss: 0.0034921540\n",
+      "epoch 620 loss: 0.0026659553\n",
+      "epoch 630 loss: 0.0034385159\n",
+      "epoch 640 loss: 0.0023585867\n",
+      "epoch 650 loss: 0.0033879705\n",
+      "epoch 660 loss: 0.0026488268\n",
+      "epoch 670 loss: 0.0030162421\n",
+      "epoch 680 loss: 0.0032548363\n",
+      "epoch 690 loss: 0.0036143538\n",
+      "epoch 700 loss: 0.0033929172\n",
+      "epoch 710 loss: 0.0030997354\n",
+      "epoch 720 loss: 0.0026031414\n",
+      "epoch 730 loss: 0.0031998856\n",
+      "epoch 740 loss: 0.0020068368\n",
+      "epoch 750 loss: 0.0031605342\n",
+      "epoch 760 loss: 0.0021462422\n",
+      "epoch 770 loss: 0.0025310810\n",
+      "epoch 780 loss: 0.0026239118\n",
+      "epoch 790 loss: 0.0023194896\n",
+      "epoch 800 loss: 0.0031002984\n",
+      "epoch 810 loss: 0.0023710850\n",
+      "epoch 820 loss: 0.0028766819\n",
+      "epoch 830 loss: 0.0022789390\n",
+      "epoch 840 loss: 0.0024624128\n",
+      "epoch 850 loss: 0.0021988305\n",
+      "epoch 860 loss: 0.0025800298\n",
+      "epoch 870 loss: 0.0019718823\n",
+      "epoch 880 loss: 0.0020395945\n",
+      "epoch 890 loss: 0.0024221668\n",
+      "epoch 900 loss: 0.0026135672\n",
+      "epoch 910 loss: 0.0023301077\n",
+      "epoch 920 loss: 0.0022886704\n",
+      "epoch 930 loss: 0.0024614352\n",
+      "epoch 940 loss: 0.0022118182\n",
+      "epoch 950 loss: 0.0027228304\n",
+      "epoch 960 loss: 0.0024152253\n",
+      "epoch 970 loss: 0.0026640528\n",
+      "epoch 980 loss: 0.0021171754\n",
+      "epoch 990 loss: 0.0030836148\n",
       "Finished Training\n"
      ]
     }
@@ -246,7 +246,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 22,
    "metadata": {
     "collapsed": false
    },
@@ -255,7 +255,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Accuracy: 0.9713333333333334\n"
+      "Accuracy: 0.9734166666666667\n"
      ]
     }
    ],
@@ -298,7 +298,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.15 (main, Nov  4 2022, 16:35:55) [MSC v.1916 64 bit (AMD64)]"
+   "version": "3.9.15"
   },
   "vscode": {
    "interpreter": {
